# curl-gui

./: .gitignore  README.md  generate-icons.js  generate-icons.mjs  index.html  package.json  pnpm-lock.yaml  svelte.config.js  test_server.py
src/: App.svelte  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: RequestPanel.svelte  ResponsePanel.svelte  SaveModal.svelte  Sidebar.svelte
