[package]
name = "curl-gui"
version = "0.1.0"
description = "An Insomnia-like HTTP client powered by curl"
authors = ["Jimmy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# curl-sys for curl bindings
curl = { version = "0.4", features = ["static-curl"] }

# For parsing JSON/XML responses
quick-xml = "0.31"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
